# game-scanner

./: .gitignore  .rustfmt.toml  CODE_OF_CONDUCT.md  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: npm-publish.yml  release.yml  test.yml
benches/: list.rs
docs/: amazon.md  blizzard.md  epicgames.md  gog.md  origin.md  riotgames.md  steam.md  ubisoft.md
examples/: executable.rs  find.rs  launch_and_close.rs  list.rs
lib/: index.d.ts  index.js
native/: Cargo.toml
native/docs/: amazon.md  steam.md
native/src/: build.rs  lib.rs  types.rs
native/src/amazon/: mod.rs
native/src/amazon/windows/: games.rs
native/src/epicgames/: mod.rs
native/src/epicgames/windows/: games.rs
native/src/gog/: mod.rs
native/src/origin/: mfst.rs  mod.rs
native/src/origin/windows/: games.rs
native/src/steam/: mod.rs
native/src/steam/windows/: games.rs  mod.rs  utils.rs
native/src/ubisoft/: mod.rs
native/src/ubisoft/windows/: games.rs
native/src/util/: io.rs  mod.rs  registry.rs
node/: Cargo.toml  package-lock.json  package.json
node/examples/: executable.js  find.js  launch_and_close.js  list.js
node/lib/: index.d.ts  index.js
node/native/: Cargo.toml
node/native/src/: lib.rs  manager.rs  utils.rs
node/native/src/types/: amazon.rs  blizzard.rs  epicgames.rs  gog.rs  mod.rs  origin.rs  riotgames.rs  steam.rs  ubisoft.rs
node/npm/: index.js  package.json
node/src/: utils.rs
node/src/types/: amazon.rs  blizzard.rs  gog.rs
src/: lib.rs  main.rs  prelude.rs  types.rs
src/amazon/: mod.rs  sqlite.rs
src/amazon/windows/: games.rs  mod.rs  utils.rs
src/blizzard/: db.rs  mod.rs  types.rs
src/blizzard/platform/: macos.rs  windows.rs
src/blizzard/proto/: mod.rs  product.rs  product_db.proto
src/blizzard/windows/: games.rs  mod.rs  utils.rs
src/epicgames/: item.rs  mod.rs
src/epicgames/linux/: games.rs
src/epicgames/platform/: linux.rs  macos.rs  windows.rs
src/epicgames/utils/: linux.rs  macos.rs  windows.rs
src/epicgames/windows/: games.rs  mod.rs  utils.rs
src/error/: mod.rs
src/gog/: mod.rs  sqlite.rs
src/gog/platform/: macos.rs  windows.rs
src/gog/utils/: macos.rs  windows.rs
src/gog/windows/: games.rs  mod.rs  utils.rs
src/manager/: mod.rs
src/origin/: mfst.rs  mod.rs
src/origin/platform/: macos.rs  windows.rs
src/origin/utils/: macos.rs  windows.rs
src/origin/windows/: games.rs  mod.rs  utils.rs
src/riotgames/: mod.rs  types.rs  yaml.rs
src/riotgames/macos/: games.rs
src/riotgames/platform/: linux.rs  macos.rs  windows.rs
src/riotgames/utils/: macos.rs  windows.rs
src/riotgames/windows/: games.rs  mod.rs  utils.rs
src/scan/: types.rs
src/steam/: acf.rs  mod.rs  types.rs  vdf.rs
src/steam/linux/: mod.rs
src/steam/macos/: games.rs
src/steam/platform/: mod.rs  windows.rs
src/steam/utils/: macos.rs  mod.rs  windows.rs
src/steam/windows/: games.rs  mod.rs  utils.rs
src/ubisoft/: mod.rs
src/ubisoft/macos/: games.rs
src/ubisoft/windows/: games.rs  mod.rs  utils.rs
src/util/: error.rs  io.rs  mod.rs  path.rs  registry.rs  string.rs
src/utils/: io.rs  mod.rs  path.rs  registry.rs  sqlite.rs  string.rs
test/: print.js
tests/: executable.rs  list.rs
