[package]
edition = "2021"
build = "build.rs"
name = "game-scanner"
description = "Game Scanner for any launcher and OS"
version = "1.1.4"
authors = ["Matheus Albino <matheusalbino@users.noreply.github.com>"]
license = "MIT"
keywords = ["api-bindings", "games"]
categories = ["api-bindings", "games"]
homepage = "https://github.com/EqualGames/game-scanner"
repository = "https://github.com/EqualGames/game-scanner"
readme = "README.md"
include = [
    "src/**/*.proto",
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
]

[lib]
name = "game_scanner"
bench = true
doc = true
crate-type = ["rlib", "cdylib"]

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.79" }
serde_yaml = { version = "0.8.23" }
url = { version = "2.2.2" }
sysinfo = { version = "0.23.5" }
prost = { version = "0.9.0" }
prost-types = { version = "0.9.0" }
bytes = { version = "1.1.0" }
chrono = { version = "0.4.19" }
directories = { version = "4.0.1" }

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.27.0",  features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
case = { version = "1.0.0" }
winreg = { version = "0.10.1" }
rusqlite = { version = "0.27.0", features = ["bundled-windows"] }

[dev-dependencies]
criterion = { version = "0.3.5" }

[build-dependencies]
prost-build = { version = "0.9.0" }
