[package]
edition = "2021"
build = "build.rs"
name = "game-scanner"
description = "Game Scanner for any launcher and OS"
version = "1.2.0"
authors = ["Matheus Albino <matheusalbino@users.noreply.github.com>"]
license = "MIT"
keywords = ["api-bindings", "games"]
categories = ["api-bindings", "games"]
homepage = "https://github.com/EqualGames/game-scanner"
repository = "https://github.com/EqualGames/game-scanner"
readme = "README.md"
include = [
    "src/**/*.proto",
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
]

[lib]
name = "game_scanner"
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "list"
harness = false

[dependencies]
serde = { version = "1.0.139", features = ["derive"] }
serde_json = { version = "1.0.82" }
serde_yaml = { version = "0.8.26" }
url = { version = "2.2.2" }
sysinfo = { version = "0.24.6" }
prost = { version = "0.11.7" }
prost-types = { version = "0.10.1" }
bytes = { version = "1.1.0" }
chrono = { version = "0.4.19" }
directories = { version = "4.0.1" }

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.28.0",  features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
case = { version = "1.0.0" }
winreg = { version = "0.10.1" }
rusqlite = { version = "0.28.0", features = ["bundled-windows"] }

[dev-dependencies]
criterion = { version = "0.3.6" }

[build-dependencies]
prost-build = { version = "0.10.4" }
