[package]
edition = "2021"
build = "build.rs"
name = "game-scanner"
description = "Game Scanner for any launcher and OS"
version = "1.2.0"
authors = ["Matheus Albino <matheusalbino@users.noreply.github.com>"]
license = "MIT"
keywords = ["api-bindings", "games"]
categories = ["api-bindings", "games"]
homepage = "https://github.com/EqualGames/game-scanner"
repository = "https://github.com/EqualGames/game-scanner"
readme = "README.md"
include = [
    "src/**/*.proto",
    "src/**/*.rs",
    "build.rs",
    "Cargo.toml",
]

[lib]
name = "game_scanner"
crate-type = ["rlib", "cdylib"]

[[bench]]
name = "list"
harness = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = { version = "0.9" }
url = { version = "2" }
sysinfo = { version = "0.29" }
prost = { version = "0.11" }
prost-types = { version = "0.11" }
bytes = { version = "1" }
chrono = { version = "0.4" }
directories = { version = "5" }

[target.'cfg(unix)'.dependencies]
rusqlite = { version = "0.29",  features = ["bundled"] }

[target.'cfg(windows)'.dependencies]
case = { version = "1" }
winreg = { version = "0.50" }
rusqlite = { version = "0.29", features = ["bundled-windows"] }

[dev-dependencies]
criterion = { version = "0.5" }

[build-dependencies]
prost-build = { version = "0.11" }
