[package]
name = "game-scan"
version = "0.1.0"
authors = ["Matheus Albino <matheusalbino@users.noreply.github.com>"]
edition = "2018"
build = "src/build.rs"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "libgamescan"
crate-type = ["rlib", "cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
winreg = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
Inflector = "0.11.4"
url = "2.2.0"
rusqlite = { version = "0.24.2", features = ["bundled"] }
directories = "3.0.1"
colored = "2.0.0"
neon = "0.4.0"
