[package]
name = "game-scanner-node"
version = "0.0.0"
authors = ["Matheus Albino <matheusalbino@users.noreply.github.com>"]
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.10.1", default-features = false, features = ["napi-5"] }
game-scanner = { version = "*", path = "../" }
