[package]
name = "node"
version = "0.1.0"
authors = ["Matheus Albino <matheusalbino@users.noreply.github.com>"]
edition = "2018"
build = "build.rs"
exclude = ["artifacts.json", "index.node"]
publish = false

[lib]
name = "libnode"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = { version = "0.7.1" }

[dependencies]
neon = { version = "0.7.1" }
game-scanner = { version = "0.1.0", path = "../../", features = [] }
