[package]
name = "node"
version = "0.1.0"
authors = ["Matheus Albino <matheusalbino@users.noreply.github.com>"]
edition = "2018"
publish = false

[lib]
name = "libnode"
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.8.2", default-features = false, features = ["napi-6"] }
game-scanner = { version = "0.1.0", path = "../../" }
