[package]
name = "game-scanner-node"
version = "0.0.0"
authors = ["Matheus Albino <matheusalbino@users.noreply.github.com>"]
edition = "2018"
publish = false

[lib]
name = "game_scanner_node"
crate-type = ["cdylib"]

[dependencies]
neon = { version = "0.8.2", default-features = false, features = ["napi-5"] }
game-scanner = { version = "1", path = "../../" }
